@startuml
skinparam style strictuml
skinparam monochrome true

' ──────────────────────────────────────────
'  Patrón de diseño: Builder
' ──────────────────────────────────────────

note as N1
  <b>Patrón de Diseño: Builder</b>
  Separa la construcción de un objeto
  complejo de su representación,
  permitiendo crear distintas
  representaciones con el mismo proceso.
end note

' ──────────────────────────────────────────
'  Validación con Zod (RecetaSchema)
' ──────────────────────────────────────────

class RecetaSchema <<(S,#AAAAAA) ZodSchema>> {
  ' Campos validados por zod antes de build()
  + nombre_receta: string.min(1)
  + descripcion: string.min(1)
  + porcion: number.positive()
  + tiempo_total: number.nonnegative()
  + dificultad: enum("Fácil" | "Medio" | "Difícil")
  + id_coccion: number.int().positive()
  + id_usuario: number.int().positive()
  + ingredientes: array().min(1)
  + instrucciones: string.min(1)

  + safeParse(data: Object): ZodResult
}

' ──────────────────────────────────────────
'  Producto final
' ──────────────────────────────────────────

class Receta {
  + id_receta: Integer
  + nombre_receta: String
  + descripcion: String
  + porcion: Integer
  + imagen: String
  + tiempo_total: Integer
  + dificultad: String
  + fecha_creacion: Date
  + proteinas_totales: Decimal
  + grasas_totales: Decimal
  + carbs_totales: Decimal
  + aporte_calorico_total: Decimal
  + id_coccion: Integer
  + id_usuario: Integer
  + ingredientes: List<IngredienteReceta>
  + instrucciones: String

  + constructor(...)
}

' ──────────────────────────────────────────
'  Builder
' ──────────────────────────────────────────

class RecetaBuilder {
  - id_receta: Integer
  - nombre_receta: String
  - descripcion: String
  - porcion: Integer
  - imagen: String
  - tiempo_total: Integer
  - dificultad: String
  - fecha_creacion: Date
  - proteinas_totales: Decimal
  - grasas_totales: Decimal
  - carbs_totales: Decimal
  - aporte_calorico_total: Decimal
  - id_coccion: Integer
  - id_usuario: Integer
  - ingredientes: List<IngredienteReceta>
  - instrucciones: String

  + reset(): RecetaBuilder
  + setId(id: Integer): RecetaBuilder
  + setNombre(nombre: String): RecetaBuilder
  + setDescripcion(desc: String): RecetaBuilder
  + setPorcion(porcion: Integer): RecetaBuilder
  + setImagen(img: String): RecetaBuilder
  + setTiempoTotal(tiempo: Integer): RecetaBuilder
  + setDificultad(dif: String): RecetaBuilder
  + setFechaCreacion(fecha: Date): RecetaBuilder
  + setNutricion(prot: Decimal, gras: Decimal, carb: Decimal, cal: Decimal): RecetaBuilder
  + setCoccion(idCoccion: Integer): RecetaBuilder
  + setUsuario(idUser: Integer): RecetaBuilder
  + setIngredientes(ingreds: List): RecetaBuilder
  + setInstrucciones(insts: String): RecetaBuilder
  + build(): Receta
}

' ──────────────────────────────────────────
'  Director
' ──────────────────────────────────────────

class RecetaService {
  + crearReceta(datosReceta: Object): Object
}

' ──────────────────────────────────────────
'  Relaciones
' ──────────────────────────────────────────

RecetaService ..> RecetaBuilder    : utiliza >
RecetaBuilder  ..> RecetaSchema    : valida con >
RecetaBuilder  ..> Receta          : <<construye>> >

@enduml
